test/bad/classes/super03.px

class A def
    func f() abstract

class B(A) def
    x: Int

class C(B) def
    func f() def
        super()
